objects/PaymentRequestItems__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>Payment_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>Payment_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Location</label>
        <referenceTo>AssociatedLocation</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>Payment_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <label>ItemType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Add Location</fullName>
                </value>
                <value>
                    <fullName>Add Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>PaymentRequestItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Request Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRI - {000000}</displayFormat>
        <label>RequestItems #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>